Fixing a bad z-index value.

--- a/demos/polaroid-taker/styles/style.css
+++ b/demos/polaroid-taker/styles/style.css
@@ -159,7 +159,7 @@ button{
     top:0;
     left: 0;
     margin:0;
-    z-index:1000px;
+    z-index:200;
     -moz-transition: opacity 250ms linear;
  -webkit-transition: opacity 250ms linear;
      -ms-transition: opacity 250ms linear;
